			[GL #899]

5207.	[test]		Check delv and dig TTL values. [GL #965]

5205.	[bug]		Enforce that a DS hash exists. [GL #899]

5204.	[test]		Check that dns_rdata_fromtext() produces a record that
			will be accepted by dns_rdata_fromwire(). [GL #852]

5203.	[bug]		Enforce whether key rdata exists or not in KEY,
			DNSKEY, CDNSKEY and RKEY. [GL #899]

5197.	[bug]		dig could die in best effort mode on multiple SIG(0)
			records. Similarly on multiple OPT and multiple TSIG
			records. [GL #920]

5194.	[bug]		Enforce non empty ZOMEMD hash. [GL #899]

5193.	[bug]		EID and NIMLOC failed to do multi-line output
			correctly. [GL #899]

5192.	[bug]		configure --fips-mode failed. [GL #946]

5191.	[port]		Darwin: dlzexternal/driver.so was not building.
			[GL #948]

5189.	[cleanup]	Remove revoked root DNSKEY from bind.keys. [GL #945]

5187.	[test]		Set time zone before running any tests in dnstap_test.
			[GL #940]

5185.	[bug]		PKCS11 build could fail if ECDSA is not supported.
			[GL #935]

5184.	[bug]		Missing unlocks in sdlz.c. [GL #936]

5182.	[bug]		Fix a high-load race/crash in handling of
			isc_socket_close() in resolver. [GL #834]

5180.	[bug]		delv now honors the operating system's preferred
			ephemeral port range. [GL #925]

5179.	[cleanup]	Replace some vague type declarations with the more
			specific dns_secalg_t and dns_dsdigest_t.
			Thanks to Tony Finch. [GL !1498]

5178.	[bug]		Handle EDQUOT (disk quota) and ENOSPC (disk full)
			errors when writing files. [GL #902]

5176.	[tests]		Remove a dependency on libxml in statschannel system
			test. [GL #926]

5175.	[bug]		Fixed a problem with file input in dnssec-keymgr,
			dnssec-coverage and dnssec-checkds when using
			python3. [GL #882]

5174.	[doc]		Tidy dnssec-keygen manual. [GL !1557]

5172.	[bug]		nsupdate now honors the operating system's preferred
			ephemeral port range. [GL #905]

5170.	[test]		Added --with-dlz-filesystem to feature-test. [GL !1587]
